<resources>
    <string name="app_name">Rafał Markiewicz Nanodegree</string>

    <string name="capstone_my_app">CAPSTONE: MY OWN APP</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="lib_app">LIBRARY APP</string>
    <string name="scores_app">SCORES APP</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="google_nano">GOOGLE NANODEGREE</string>
</resources>
